--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+
+    <% if (process.env.NODE_ENV === 'production' && process.env.VITE_GA_ID) { %>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.VITE_GA_ID %>"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', '<%= process.env.VITE_GA_ID %>');
+    </script>
+    <% } %>
   </head>
   <body>
     <!-- quasar:entry-point -->
