fix(image): Image url

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title><%= process.env.VITE_SHOP_NAME %></title>
+    <title><%= productName %></title>
     <meta charset="utf-8" />
     <meta name="description" content="E-Comm Shop" />
     <meta name="format-detection" content="telephone=no" />
